# cellcommunication-Pf2

./: .gitignore  Human-2020-Jin-LR-pairs.csv.zst  README.md  makefile  pyproject.toml
.github/workflows/: documentation.yml  test.yml
cellcommunication-pf2/: cc-pf2.py
cellcommunication-pf2/figures/: figure1.py
cellcommunicationpf2/: README.md  cc-pf2.py  cc_pf2.py  ccc.py  ccc_pf2.py  ccc_rise.py  import_data.py  logreg.py  pyproject.toml  tensor.py  test.py  utils.py
cellcommunicationpf2/data/Tensor-cell2cell/: C100.csv  C141.csv  C142.csv  C143.csv  C144.csv  C145.csv  C146.csv  C148.csv  C149.csv  C152.csv  C51.csv  C52.csv  tensor-bal.pkl
cellcommunicationpf2/figures/: annotations_alad.ipynb  common.py  figure1.py  figure10.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py  figureA1.py  figureA1a.py  figureA1b.py  figureA2.py  figureA2a.py  figureA2b.py  figureA2b_c.py  figureA2c_d.py  figureA2d_g.py  figureA2e_h.py  figureA2i.py  figureA2j.py  figureA2k_l.py  figureA2l_m.py  figureA3.py  figureA3a.py  figureA3b.py  figureA3c.py  figureA3d.py  figureA3d_e.py  figureA3e.py  figureA3f.py  figureA3g.py  figureA3h.py  figureA3i.py  figureA3i_j.py  figureA3k.py  figureA3l_m.py  (+71 more)
cellcommunicationpf2/figures/commonFuncs/: plotFactors.py  plotGeneral.py  plotPaCMAP.py
cellcommunicationpf2/phenotypes/: __init__.py
cellcommunicationpf2/phenotypes/weigt2025/: __init__.py  ctot_phenotype.parquet  ctot_phenotype_definitions.parquet  ucla_phenotype.parquet
cellcommunicationpf2/rank_selection/: __init__.py  rank_selection.py
cellcommunicationpf2/rank_selection/tests/: plot_validation.py
cellcommunicationpf2/src/cellcommunicationpf2/: __init__.py
cellcommunicationpf2/tests/: test_OP.py  test_ccc.py  test_ccpf2.py  test_figures.py
docs/: api_reference.rst  conf.py  generate_tutorial_figures.py  index.rst  references.rst  tutorial.rst
docs/source/: conf.py  index.rst  pacmap_guidance.rst  preprocessing.rst  quickstart.rst  rank_selection.rst  scoring_methods.rst
docs/source/api/: index.rst
docs/source/api/modules/: ccc.rst  ccc_rise.rst  import_data.rst  logreg.rst  tensor.rst  utils.rst
