[project]
name = "cellcommunicationpf2"
version = "0.1.0"
description = "Cell cell communication implementation of PARAFAC2"
authors = [{name = "Andrew Ramirez", email = "andramirez@ucla.edu" }]
license = "MIT"
requires-python = ">= 3.11"

dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.12",
    "pymanopt>=2.2.1",
    "autograd>=1.7.0",
]

readme = "README.md"

[project.scripts]
fbuild = "cellcommunicationpf2.figures.common:genFigure"
factor = "cellcommunicationpf2.imports:factorSave"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cellcommunicationpf2"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
