[project]
name = "cellcommunicationpf2"
version = "0.1.0"
description = "Cell cell communication implementation of PARAFAC2"
authors = [{name = "Andrew Ramirez", email = "andramirez@ucla.edu" }]
license = "MIT"
requires-python = ">= 3.12"

dependencies = [
    "numpy>=2.2",
    "scipy>=1.16.0",
    "scikit-learn>=1.4.2",
    "anndata>=0.11.3",
    "tensorly>=0.9.0",
    "matplotlib~=3.10.1",
    "seaborn~=0.13.2",
    "datashader>=0.17.0",
    "pacmap>=0.8.0",
    "liana>=1.5.1",
    "tensorly-viz>=0.1.7",
    "parafac2 @ git+https://github.com/meyer-lab/parafac2.git@main",
    "zstandard>=0.23.0",
    "pyarrow>=15.0.0",
]

readme = "README.md"

[project.scripts]
fbuild = "cellcommunicationpf2.figures.common:genFigure"
factor = "cellcommunicationpf2.imports:factorSave"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pyright>=1.1",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "nbsphinx>=0.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cellcommunicationpf2"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
